# uniscale

./: .gitignore  README.md  pyproject.toml
experiments/configs/: model_training.yaml  model_training_scalinglaw.yaml  model_training_scalinglaw_new.yaml  tokenizer_training.yaml  tokenizer_training_final.yaml  tokenizer_training_superbpe.yaml
scripts/: convert_corpus_to_jsonl.py  corpus_downloader.py  evaluate_all_models.py  evaluate_tokenizers.py  load_many_parquets.py  load_superbpe.py  load_tokenizer.py  process_parquets.py  slurm_train.sbatch  submit_slurm_jobs.py  train_all_models.py  train_all_tokenizers.py  train_superbpe_tokenizer.sh
src/uniscale/: __init__.py
src/uniscale/analysis/: correlation_analysis.py
src/uniscale/data/: download_data.py
src/uniscale/evaluation/: evaluate.py  metrics.py  tokenizer_eval.py
src/uniscale/models/: train_lm.py
src/uniscale/models/architectures/: model_config.py
src/uniscale/tokenizers/: ALGORITHMS.md  PARITY_AWARE_BPE_USAGE.md  README.md  TKTKT_USAGE.md  train_tokenizer.py  train_tokenizer_beta.py
src/uniscale/tokenizers/backends/: __init__.py  base.py  huggingface.py  parity_aware_bpe.py  sentencepiece.py  superbpe.py  tktkt.py
